syntax = "proto3";

package cloud.lianmi.im.auth;
option go_package = "github.com/lianmi/servers/api/proto/auth";

//客户端类型
//是否必填：是
enum ClientType {
    Ct_UnKnow = 0;
    Ct_Android = 1;
    Ct_iOS = 2;
    Ct_RESTApi = 3;
    Ct_Windows = 4;
    Ct_MacOS = 5;
    Ct_Web = 6;
}
//客户端模式
enum ClientMode {
    Clm_UnKnow = 0;
    Clm_Im = 1; //一般模式
    Clm_ImEncrypted = 2; //加密模式
}
//多端同时登录时，其他在线的客户端的信息
message DeviceInfo {
    //用户注册号
    //是否必填-是
    string username = 1;
    //连接ID,服务器分配,等同于http服务中的sessionId
    //示例:624ecb8b-308a-451c-be6b-62faca49848b
    //是否必填-是
    string connectionId = 2;
    //设备Id
    //是否必填-是
    string deviceId = 3;
    //设备索引号
    //是否必填-是
    int32 deviceIndex = 4;
    //是否是主设备
    //是否必填：是
    bool isMaster = 5;
    //操作系统版本
    //是否必填-是
    string os = 6;
    //设备类型
    //是否必填-是
    auth.ClientType clientType = 7;
    //该设备最后登录时间
    //是否必填-是
    fixed64 logonAt = 8;


}




