
syntax = "proto3";
import "api/proto/team/TeamInfo.proto";
import "api/proto/team/CreateTeam.proto";

package cloud.lianmi.im.team;
option go_package = "github.com/lianmi/servers/api/proto/team";

//分页获取群组成员信息
//分页方式获取群组群成员信息，该接口仅支持在线获取，SDK不进行缓存
message GetTeamMembersPageReq {
    //群组ID
    //是否必填-是
    string teamId = 1;
    //查询类型
    //MemberQueryTypeEnum
    //是否必填-否
    QueryType queryType = 2;
    //页数,第几页
    //默认1
    //是否必填-否
    int32 page = 3; // [default=1];

    //每页成员数量
    //默认100,最大只允许100
    //是否必填-否
    int32 pageSize = 4; // [default=100];


}

//响应
//分页获取群组成员信息
message GetTeamMembersPageRsp {
    //群成员列表
    //是否必填-是
    repeated Tmember members = 1;

    //总页数，按pageSize计算而来
    int32 total = 2; 

}

